[package]
name = "mozambigue"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
