[package]
name = "mozambigue"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@gmail.com>"]
description = "JWT validation library with JWKS caching for Kubernetes service account tokens"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mozambigue"
documentation = "https://docs.rs/mozambigue"
readme = "README.md"
keywords = ["jwt", "jwks", "kubernetes", "authentication", "token"]
categories = ["authentication", "web-programming", "cryptography"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
